--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </ul>
 
 <div id="main" class="derp">
-<img id="photo_id" src="pics/vs.jpg" alt="photo" title="photo" class="poto">
+<img id="photo_id" src="pics/vs.jpg" alt="photo" title="photo" class="photo">
 
 
 <p>
