--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ I am an associate professor at University of Turku, Department of Mathematics an
 	</button>
 	
 	<div class="text">
-		Sometimes people speak of symbolic dynamics as "the swamp of undecidability", a funny term due to Douglas Lind. While, as I've discussed above, it's possible to turn this pessimism around into universality results. Sometimes it's still nice to consider more restricted classes, where there are less constructions and more proofs. I have invented several classes of SFTs that are better-behaved than general SFTs, in particular TEP subshift and avoshifts. The latter generalizes group shifts.
+		Sometimes people speak of symbolic dynamics as "the swamp of undecidability", a funny term due to Douglas Lind. While, as I've discussed above, it's possible to turn this pessimism around into universality results, sometimes it's still nice to consider more restricted classes, where there are less constructions and more proofs. I have invented several classes of SFTs that are better-behaved than general SFTs, in particular TEP subshift and avoshifts. The latter generalizes group shifts.
 	</div></li>
 	
 	<li> <button type="button" class="collapse">
