--- a/kuluma/index.html
+++ b/kuluma/index.html
@@ -10,20 +10,20 @@
 	<li> A three-dimensional game with only a few pixels. You see the 3d effect by crossing your eyes.
 	</ul>
   <li><a href="conwaysoldiers.html">A simple Conway's Soldiers in JS</a></li>
-  <li><a href="findit.php">Findit</a></li>
+  <li><a href="findit.html">Findit</a></li>
 </ul>
 </p>
 
 <p>Some works in progress:
 <ul>
-  <li><a href="spider.php">Spider</a></li>
+  <li><a href="spider.html">Spider</a></li>
 </ul>
 </p>
 
 <p>Old finished projects:
 <ul>
-  <li><a href="m090.php">m090</a> (from around 2003?)</li>
-  <li><a href="onokki.php">onokki</a> (from around 2006?)</li>
+  <li><a href="m090.html">m090</a> (from around 2003?)</li>
+  <li><a href="onokki.html">onokki</a> (from around 2006?)</li>
 </ul>
 </p>
 
