--- a/kuluma/findit.html
+++ b/kuluma/findit.html
@@ -3,15 +3,15 @@
 <body>
 <h1> Findit </h1>
 
-<p> <a href="https://play.google.com/store/apps/details?id=com.kestomaailma.findit">Findit</a> is a game where you are presented with a large picture and a small picture. You try to find the small picture from the larger one, and repeat forever.</p>
+<p> Findit is a game where you are presented with a large picture and a small picture. You try to find the small picture from the larger one, and repeat forever.</p>
 
-<p>A mobile version can be downloaded <a href="https://play.google.com/store/apps/details?id=com.kestomaailma.findit">here</a>.</p>
+<p>A mobile version used to be downloadable <a href="https://play.google.com/store/apps/details?id=com.kestomaailma.findit">here</a>, but you unfortunately have to actively agree to various new things for your games to stay on there, and I don't have a maintenance team.</p>
 
-<p>I originally made this game with JavaScript (that version available <a href="finditonline.php">here</a>) to train my pattern matching skills, to have an excuse to play with random generators, and because I figured this would be an improved version of the good-old &quot;find the difference&quot; type of game, as you don't have to cross your eyes or swap rapidly back and forth because the small picture is quick to memorize.</p>
+<p>I originally made this game with JavaScript (that version available <a href="finditonline.html">here</a>) to train my pattern matching skills, to have an excuse to play with random generators, and because I figured this would be an improved version of the good-old &quot;find the difference&quot; type of game, as you don't have to cross your eyes or swap rapidly back and forth because the small picture is quick to memorize.</p>
 
 
 
-The mobile version currently has 13 levels, using different pseudorandom generators. Here's rough descriptions of some of the prngs used; there are several parameters I have adjusted to my liking and do not explain in detail.
+The mobile version (again, currently unavailable :())) currently has 13 levels, using different pseudorandom generators. Here's rough descriptions of some of the prngs used; there are several parameters I have adjusted to my liking and do not explain in detail.
 <ul>
 <li> classic: Bernoulli distribution with low \(p\) and large pixel size. </li>
 <li> squiggles: Finitely many ranges of self-avoiding random walks (sampled naively). </li>
@@ -30,7 +30,7 @@ The mobile version currently has 13 levels, using different pseudorandom generat
 
 <p>I'm happy to receive comments and criticism about the game at vosalo(at)utu.fi.</p>
 
-<p>Latest update July 28th, 2017.</p>
+<p>Latest update February 10th, 2026.</p>
 </body>
 </html>
 
