some changes in expl

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ I am an associate professor at University of Turku, Department of Mathematics an
 	<div class="text">
 		Often, in symbolic dynamics our basic objects (subshifts, their automorphism groups, cellular automata...) are so complicated, that we can't expect to have any simple descriptions of any phenomena. So what we do is try to show that we can in some sense to absolutely anything.
 		<br><br>
-		For example, we gave an example of a "physically universal" Turing machine with Ilkka Törmä (it can implement any transformation of space, in a sense). As another, I've shown that every even permutation of \(\{0,1\}^n\) (for \(n \geq 4\)) can be written as a composition of the "flip the \(i\)th bit if the left neighbor is \(1\) or the right neighbor is \(0\)". You can try to flip a single bit <a href="<kuluma/e57game.html">here</a>. As far as I know, no human has ever succeeded in this (of course it's easy to write a search script, that's what I did for my paper).
+		For example, we gave an example of a "physically universal" Turing machine with Ilkka Törmä (it can implement any transformation of space, in a sense). As another example (not really in the spirit of the previous paragraph, but whatever), I've shown that every even permutation of \(\{0,1\}^n\) (for \(n \geq 4\)) can be written as a composition of the "flip the \(i\)th bit if the left neighbor is \(1\) or the right neighbor is \(0\)". You can try to flip a single bit <a href="<kuluma/e57game.html">here</a>. As far as I know, no human has ever succeeded in this (of course it's easy to write a search script, that's what I did for my paper).
 	</div></li>
 	
 	<li> <button type="button" class="collapse">
@@ -113,7 +113,7 @@ I am an associate professor at University of Turku, Department of Mathematics an
 	</button>
 	
 	<div class="text">
-		We drop some type of turtle (with a very small brain) on some type of graph. It walks around, trying to understand where it is. What kind of properties can be observed by a turtle, if we cleverly program its brain?
+		Imagine you drop some type of turtle (with a very small brain) on some type of graph. It walks around, trying to understand where it is. What kind of properties can be observed by a turtle, if we cleverly program its brain?
 		<br><br>
 		For example, for subshifts on groups that are defined this way, we showed with Ilkka Törmä that 3 turtles can already define the same subshift that any finite amount can, if the groups is not torsion and has decidable word problem (otherwise, I've shown the sharp limit is 4 turtles). On torsion groups, on the other hand, you may need an arbitrary amount of turtles. 
 	</div></li>
@@ -123,7 +123,9 @@ I am an associate professor at University of Turku, Department of Mathematics an
 	</button>
 	
 	<div class="text">
-		Let's say a <em>cellular automaton</em> is a continuous shift-commuting function \(f : A^G \to A^G\), where \(A\) is a finite alphabet and \(G\) a finitely-generated group. This is a continuous self-map of the full shift \(A^G\), which is a compact metric space, so we are in a very standard case of dynamical systems. Let's say such a map is <em>asymptotically nilpotent</em> if every point tends to the same zero-point \(0\), and <em>nilpotent</em> if this convergence is uniform. We showed with Ilkka Törmä that if \(G\) is residually finite and virtually solvable, then these properties are equivalent.
+		Much of dynamics studies things like invariant measures and entropy. This is hot dynamics. By cold dynamics (a term I learned from Guillaume Theyssier), we mean all the other stuff. Zero entropy is still lukewarm dynamics for me, and I usually have in mind even colder stuff. Things like the trivial map, the map that takes all points to some zero point, dynamical systems with countably many points.
+	
+		One example of such a result of mine. Let's say a <em>cellular automaton</em> is a continuous shift-commuting function \(f : A^G \to A^G\), where \(A\) is a finite alphabet and \(G\) a finitely-generated group. This is a continuous self-map of the full shift \(A^G\), which is a compact metric space, so we are in a very standard case of dynamical systems. Let's say such a map is <em>asymptotically nilpotent</em> if every point tends to the same zero-point \(0\), and <em>nilpotent</em> if this convergence is uniform. We showed with Ilkka Törmä that if \(G\) is residually finite and virtually solvable, then these properties are equivalent.
 	</div></li>
 	
 	<li> <button type="button" class="collapse">
@@ -131,7 +133,9 @@ I am an associate professor at University of Turku, Department of Mathematics an
     </button>
 	
 	<div class="text">
-		With Ilkka Törmä, we have solved many open problems of the Game of Life community, and Conway's "unique father problem". 
+		It's interesting to fix a single complex system, and then try to understand it. We've looked quite a lot at Game of Life with Ilkka Törmä. I don't think it's a particularly special cellular automaton (it's not even all that special in the class of totalistic rules that Conway took it from). It's really just a famous one, and thus seems like the natural canonical choice for an arbitrary complex rule to study.
+		
+		With Ilkka Törmä, we have solved many open problems of the Game of Life community. Our main result is perhaps the solution to Conway's "unique father problem". We also have, for instance, periodic configurations that have a Game of Life preimage, but have no periodic such preimage.
 	</div></li>
 	
 	<li> <button type="button" class="collapse">
