trying some centering and wide screen fix

--- a/closedproblems.html
+++ b/closedproblems.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>		
+<div class="page">
 
 <h1>Ville Salo's webpage</h1>
 
@@ -616,5 +617,7 @@ Computer Science, 661:35–55, 2017.</span>
 <br>
 <br>
 </span>
+
+</div>
 
 </body>
