--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 </head>
 <body>
 
+<div class="page">
 <h1>Ville Salo's webpage</h1>
+
 
 <ul id="menu">
 	<li><a href="index.html">Main page</a></li>
@@ -40,6 +42,7 @@
 <p>
 I am an associate professor at University of Turku, Department of Mathematics and Statistics. On this page, you can find information about my research, and other stuff. You can reach me through vosalo(at)utu(dot)fi.
 </p>
+
 
 <div id="research" class="derp">
 <h3>Research</h3>
@@ -199,6 +202,8 @@ I am an associate professor at University of Turku, Department of Mathematics an
 		<li> I know a bit of Japanese and Russian.</li>
 		</ul></li>
 	</ul>
+</div>
+</div>
 </div>
 
 <script>
