--- a/publications.html
+++ b/publications.html
@@ -16,6 +16,7 @@
 
 <body>		
 
+<div class="page">
 <h1>Ville Salo's webpage</h1>
 
 <ul id="menu">
@@ -575,6 +576,8 @@
 			</ul>
 		</ul>
 	</ul>
+	
+	</div>
 	
 	<!--
 	<h3>Some works in progress</h3>
