--- a/openproblems.html
+++ b/openproblems.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>		
+<div class="page">
 
 <h1>Ville Salo's webpage</h1>
 
@@ -410,6 +411,8 @@ A cellular automaton \(f\) on \(A^{\mathbb{Z}}\) is <em>linear</em> if it respec
 	<p>
 	Latest update: February 22nd, 2024.
 	</p>
+	
+</div>
 
 
 </body>
